--- a/force-app/main/default/lwc/highhChart/highhChart.html
+++ b/force-app/main/default/lwc/highhChart/highhChart.html
@@ -2,5 +2,9 @@
     <lightning-card  variant="Narrow"  title="Hello">
         <div class="chart"></div>
     </lightning-card>
+
+     <lightning-card  variant="Narrow"  title="Hello">
+        <div class="chart1"></div>
+    </lightning-card>
    
 </template>
